[package]
name = "nia"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
atom_syndication = "0.12.7"
chrono = { version = "0.4.43", features = ["now"] }
crossterm = "0.29.0"
linkify = "0.10.0"
postcard = { version = "1.1.3", features = ["use-std"] }
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
sled = "0.34.7"
url = "2.5.8"
