[package]
name = "nia"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6"
atom_syndication = "0.12"
chrono = { version = "0.4", features = ["now"] }
crossterm = "0.29"
linkify = "0.10"
postcard = { version = "1.1", features = ["use-std"] }
ratatui = "0.30"
reqwest = { version = "0.13", features = ["blocking"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
url = "2.5"
