[package]
name = "nia"
version = "0.1.0"
edition = "2024"

[dependencies]
atom_syndication = { version = "0.12", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["now"] }
crossterm = { version = "0.29", default-features = false, features = ["events"] }
linkify = { version = "0.10", default-features = false }
postcard = { version = "1.1", default-features = false, features = ["use-std"] }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
reqwest = { version = "0.13", features = ["blocking"] }
rss = { version = "2.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
sled = { version = "0.34", default-features = false }
url = { version = "2.5", default-features = false }
